learning_logs/static/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Sura&display=swap');

h1, h2, h3, h4, h5, h6 {
    font-family: 'Sura', sans-serif;
    font-size: large;
}
body {
    background-color: #dedef3;
    font-family: 'Merriweather', sans-serif;
}
.display-3{
    text-transform: uppercase;
}
.lead, .display-3 {
    color: black;
}
.navbar {
    background: white;
}
.navbar-brand {
    color: rgb(255 255 255);
    text-transform: uppercase;
}
.bookmark {
    font-size: 1.3rem;
}

a.register{
    background-color: #28a745;
}
.nav-item, .nav-link {
    color: black;
}
.list-group-item a{
color: black;
}
.navbar-light .navbar-text {
    color: black!important;
}
.new-entry {
    text-transform: uppercase;
    color: white;
}

.edit {
    display: flex !important;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-end;
    color: black;
}
.topic-on-hand {
    text-decoration: underline;
    color: black;
    text-align: center;
}
.topic-edit {
    font-size: xx-large;
}
.btn-secondary.go-back {
    float: left!important;
}
/* Index html */

main.container {
    padding: 11px;
}

#jumbotron {
    padding: 0;
}
.add-topic {
    color: black;
}
.list-group-flush {
    margin-bottom: 20px!important;
}

ul {
    margin-top: 20px!important;
}
.container-md {
    text-align: center;
  }

  img {
    display: block !important;
    margin: auto !important;
  }
.card.bg-light {
    padding: 5%;

}
footer.bg-light {
    position: relative;
    bottom: 0;
    width: 100%;
  }
p {
    margin-bottom: 18rem;
}
p#topic-name{
    margin-bottom: 3rem;
}
p.search-p {
    padding: 10px;
    text-align: center;
}
/* Media queries */


/* Small screens */

@media (max-width: 768px) { 
.nav-item {
    border-bottom: 1px solid black;
}
.navbar-brand {
    font-size: 1rem;
    letter-spacing: 7px;
}
.bookmark {
    font-size: .8rem;
}
img.logo-img  {
    width: 78%  
}
p {
    font-size: small;
}

/* Index Html */


.display-3 {
    font-size: 2rem;
}
.lead {
    font-size: small;
}
.register {
    font-size: small;
}
.navbar-toggler-icon {
    height: 20px;
    width: 20px;
}
}

/* Medium screens */
@media (max-width: 992px) and (min-width: 768px){ 
    .display-3 {
        font-size: 3rem;
    }
    .lead {
        font-size: medium;
    }
    .register {
        font-size: medium;
    }
}

